# cart_api

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/abstractions/: storage.py
app/entities/: __init__.py  cart.py  product.py
app/external_dependencies/: __init__py  cart_storage.py
app/use_cases/: cart.py
tests/: conftest.py  test_add_item_to_cart.py  test_server.py
